add clear history button

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
                     <div class="row">
                         <div class="col-md-8">
                             <h1>Weather Dashboard</h1>
+                            <div></div>
                         </div>
                         <div class="col-md-4">
                             <div class="countDown" id="minutes"></div>
                             <div class="countDown" id="seconds"></div>
+                        </div>
+                    </div>
+                    <!-- row03 -->
+                    <div class="row">
+                        <div class="col-md-8">
+                            <p id="currentDay" class="lead"></p>
                         </div>
                     </div>
                 </div>
@@ -62,6 +69,9 @@
                         <div class="col-md-8">
                             <div class="container resultContent">
 
+                            </div>
+                            <div>
+                                <button class="btn clearBtn" type="button">Clear History</button>
                             </div>
                         </div>
                     </div>
