--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us" class="h-100">
+<html lang="en-us">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,6 +38,7 @@
                         </div>
                     </div>
                 </div>
+            </header>
 
             <section id="mainContent" class="flex-shrink-0">
                 <div class="container">
